# bitcoin-price

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: controllers.rs  handlers.rs  main.rs  models.rs
backend/src/utils/: tracing.rs
frontend/: index.html  logic.js
